# ckanext-onboarding-baglan-adaskhan

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/onboarding_baglan_adaskhan/: authz.py  cli.py  dataset_schema.yml  helpers.py  mailer.py  plugin.py  views.py
ckanext/onboarding_baglan_adaskhan/assets/: pending-review-confirm.js  review-status-tooltip.js  script.js  style.css  webassets.yml
ckanext/onboarding_baglan_adaskhan/i18n/: ckanext-onboarding_baglan_adaskhan.pot
ckanext/onboarding_baglan_adaskhan/lib/: helpers.py  queries.py
ckanext/onboarding_baglan_adaskhan/logic/: action.py  auth.py  schema.py  validators.py
ckanext/onboarding_baglan_adaskhan/model/: dataset_review.py
ckanext/onboarding_baglan_adaskhan/templates/: base.html  dataset_reviews.html  header.html  my_custom_template.html
ckanext/onboarding_baglan_adaskhan/templates/admin/: base.html  reviewers.html
ckanext/onboarding_baglan_adaskhan/templates/emails/: dataset_review.html  dataset_review_subject.txt  review_back_to_pending.html
ckanext/onboarding_baglan_adaskhan/templates/package/: edit_base.html  read.html
ckanext/onboarding_baglan_adaskhan/templates/snippets/: package_item.html  review_status_badge.html
ckanext/onboarding_baglan_adaskhan/tests/: test_helpers.py  test_plugin.py  test_validation.py  test_views.py
ckanext/onboarding_baglan_adaskhan/tests/logic/: test_action.py  test_auth.py  test_validators.py
ckanext/onboarding_baglan_adaskhan/views/: admin.py  dataset.py  home.py  user.py
(+4 files in other folders)
