[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
    onboarding = ckanext.onboarding_baglan_adaskhan.plugin:OnboardingPlugin

babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/onboarding_baglan_adaskhan/i18n/ckanext-onboarding_baglan_adaskhan.pot
width = 80

[init_catalog]
domain = ckanext-onboarding_baglan_adaskhan
input_file = ckanext/onboarding_baglan_adaskhan/i18n/ckanext-onboarding_baglan_adaskhan.pot
output_dir = ckanext/onboarding_baglan_adaskhan/i18n

[update_catalog]
domain = ckanext-onboarding_baglan_adaskhan
input_file = ckanext/onboarding_baglan_adaskhan/i18n/ckanext-onboarding_baglan_adaskhan.pot
output_dir = ckanext/onboarding_baglan_adaskhan/i18n
previous = true

[compile_catalog]
domain = ckanext-onboarding_baglan_adaskhan
directory = ckanext/onboarding_baglan_adaskhan/i18n
statistics = true
